--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.2",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.1",
+    "pug": "^2.0.3",
     "sequelize": "^4.32.3",
     "sequelize-cli": "^3.2.0"
   }
